# ocr-rag

./: .env.example  .gitignore  Dockerfile  README.md  ocr_output.json  pyproject.toml  railway.json  requirements.txt
scripts/: download_models.py
src/ocr_api/: cli.py  config.py  main.py  ocr.py  schemas.py
tests/: test_api.py
