[project]
name = "ocr-api"
version = "0.1.0"
description = "Local OCR API for Marathi, Hindi, and English documents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "paddlepaddle==3.2.0",
    "paddleocr==3.7.0",
    "easyocr>=1.7.2",
    "pymupdf>=1.24.9",
    "pillow>=10.4.0",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.10.0.84",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

